--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -9,7 +9,7 @@
         </div>
     <div class="row" style="padding-left: 20px;">
       <div class="col-xs-12 col-md-12 content" style="margin-top: 20px;  display: inline;">
-         <input type="text" class="jsonly search-widget-workflow" id="search-input" style="width: 90%;" placeholder="Search workflows" tabindex="1" onkeydown="check_key(event)" autofocus />
+         <input type="text" class="jsonly search-widget-workflow" id="search-input" style="width: 90%;" placeholder="Search blog by categories, title and description." tabindex="1" onkeydown="check_key(event)" autofocus />
         <button type="button" class="search-button-workflow" id="searchBtn" onclick="search_content()">
             <i class="fa fa-search"></i>
         </button>
@@ -49,7 +49,7 @@
                     <a class="tag-workflow" href="/categories/{{ . | urlize }}">{{ . }}</a>
                     {{end}}
                 </div>
-                <div class="getting-started-button" style="text-align:right">
+                <div class="getting-started-button">
                         
                     
                     <a href="{{ .Permalink }}" class="no-break-buttons">
@@ -115,9 +115,9 @@
         var results  = search(param);
         $("#search-results").show();
         var search_results = document.getElementById('search-results')
-        if (results.length< 1){
-            search_results.innerHTML = '<div style="padding:10px 10px"> No results found.</div>';
-
+        if (results.length<1){
+            search_results.innerHTML = '<div style="padding: 20px 10px"> No blog posts found. </div>';
+        // var html_el = ""
         }
         else{
         search_results.innerHTML = "";
@@ -135,26 +135,16 @@
             html_el += '<h2 class="workflow-title">'+results[page].title+'</h2>'
 
             
-            html_el += '<p class="feature-text">'+results[page].content+'</p>'
+            html_el += '<p class="feature-text">'+results[page].longExcerpt+'</p>'
 
             html_el += '<div class="tags"  style="padding-bottom: 10px;text-transform: capitalize;">Tags:'
-                    for(var img in results[page].tags){
+                    for(var cat in results[page].categories){
                     
-                    html_el += '<a class="tag-workflow" href="/tags/'+results[page].tags[img]+'">'+results[page].tags[img]+'</a>'
+                    html_el += '<a class="tag-workflow" href="/tags/'+results[page].categories[cat]+'">'+results[page].categories[cat]+'</a>'
                 }
                 html_el +='</div>'
             html_el += '<div class="getting-started-button">'
-
-            if (results[page].download != "" && results[page].download != '<no value>' ){
-                html_el += '<a href="https://service.biolab.si/download/workflow?name='+results[page].download+'" class="no-break-buttons" target="_blank"><div class="learn-more feature-block"><div class="feature-block fa fa-download jsonly"></div><div class="feature-block feature-link">Download</div></div></a>&nbsp;&nbsp;'
-            }
-            if (results[page].video != "" && results[page].video != '<no value>' ){
-                html_el += '<a class="lightbox no-break-buttons" href="'+results[page].video +'"target="_blank"><div class="feature-block fa fa-play-circle-o jsonly"></div><div class="feature-block feature-link">Watch Video</div></a>&nbsp;&nbsp;'
-            }
-            if (results[page].blog != "" && results[page].blog != '<no value>' ){
-                html_el += '<a class="lightbox no-break-buttons" href="https://singlecell.biolab.si/blog/'+results[page].blog+'"><div class="feature-block fa fa-book jsonly"></div><div class="feature-block feature-link">Blog post</div></a>&nbsp;&nbsp;'
-            }
-
+            html_el+= '<a href="'+results[page].uri+'" class="no-break-buttons"><div class="learn-more feature-block"><div class="feature-block feature-link">Read More</div> <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div></div></a>'
 
             html_el += '</div></div>'
             var position = "";
@@ -165,43 +155,45 @@
             else{
                 html_el += '<div class="content col-md-6 col-xs-12 " style="padding: 20px;padding-top: 0px;">';
             }
-            if (results[page].images.length >1){
-                html_el+= '<div id="myCarousel'+page+'" class="carousel slide" data-interval="false" > <div class="carousel-inner workflow-slider">'
-                    for(var img in results[page].images){
-                        html_el+= '<div class="item'
-                        if(img==0){
-                            html_el += 'active">'
-                        }
-                        else{
-                            html_el+= '>'
-                        }
+            // if (results[page].images.length >1){
+            //     html_el+= '<div id="myCarousel'+page+'" class="carousel slide" data-interval="false" > <div class="carousel-inner workflow-slider">'
+            //         for(var img in results[page].images){
+            //             html_el+= '<div class="item'
+            //             if(img==0){
+            //                 html_el += 'active">'
+            //             }
+            //             else{
+            //                 html_el+= '>'
+            //             }
 
-                       html_el += '<img src="'+results[page].images[img]+'" class="workflow-image" ></div>'
+            //            html_el += '<img src="'+results[page].images[img]+'" class="workflow-image" ></div>'
                       
-                    }
-                    html_el += '</div>'
-                html_el += '<ol class="carousel-indicators" >'
-                    for(var img in results[page].images){
-                     html_el += '<li data-target="#myCarousel'+page+'" data-slide-to="'+img+'" class="'
-                        if(img==0){
-                                html_el += 'active">'
-                            }
-                        else{
-                            html_el+= '>'
-                        }
-                        html_el +='</li>'
-                    }
-                html_el+='</ol>'
+            //         }
+            //         html_el += '</div>'
+            //     html_el += '<ol class="carousel-indicators" >'
+            //         for(var img in results[page].images){
+            //          html_el += '<li data-target="#myCarousel'+page+'" data-slide-to="'+img+'" class="'
+            //             if(img==0){
+            //                     html_el += 'active">'
+            //                 }
+            //             else{
+            //                 html_el+= '>'
+            //             }
+            //             html_el +='</li>'
+            //         }
+            //     html_el+='</ol>'
 
-                html_el += '<a class="left carousel-control" href="#myCarousel'+page+'" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" style="color: black;"></span></a>'
+            //     html_el += '<a class="left carousel-control" href="#myCarousel'+page+'" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" style="color: black;"></span></a>'
                 
-                html_el += '<a class="right carousel-control" href="#myCarousel'+page+'" data-slide="next"><span class="glyphicon glyphicon-chevron-right" style="color: black;"></span></a></div>'
+            //     html_el += '<a class="right carousel-control" href="#myCarousel'+page+'" data-slide="next"><span class="glyphicon glyphicon-chevron-right" style="color: black;"></span></a></div>'
 
+            // }
+            // else{
+            if (results[page].image){
+                html_el += '<img class="image'+position+'" src="'+results[page].image+'" style="padding:40px;"></div>'
             }
-            else{
-                html_el += '<img class="image'+position+'" src="'+results[page].images+'" style="padding:40px;"></div>'
 
-            }
+            // }
 
             
             html_el += "</div> </div>"
@@ -212,13 +204,11 @@
     }
      
    </script>
-   <script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
-   <script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
-   <link href="{{"css/auto-complete.css" | relURL}}" rel="stylesheet">
+   <script type="text/javascript" src="/js/lunr.js"></script>
    <script type="text/javascript">
       var baseurl = "{{.Site.BaseURL}}";
    </script>
-   <script type="text/javascript" src="/js/search-workflow.js"></script>
+   <script type="text/javascript" src="/js/search.js"></script>
 
 
 
