--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -28,7 +28,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="search-results" style="display: none;">  
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="post_nor">
-    {{ $paginator := .Paginate (where (where .Pages.ByWeight.Reverse "Type" "blog") "IsPage" true) }}
+    {{ $paginator := .Paginate (where (where .Pages.ByDate.Reverse "Type" "blog") "IsPage" true) }}
     {{ range $index, $element := .Paginator.Pages }}
         <div class=" row">
             {{ if eq (mod $index 2) 0 }}
@@ -127,22 +127,22 @@
         for(var page in results){
             html_el += '<div class="row">';
             if (page % 2 == 0){
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left">';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left" style="padding-top: 60px;">';
             }
             else{
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right"';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right" style="padding-top: 60px;">';
             }
+            html_el += '<p class="feature-text">Author: '+results[page].author +', '+results[page].date+'</p>'
             html_el += '<h2 class="workflow-title">'+results[page].title+'</h2>'
 
             
             html_el += '<p class="feature-text">'+results[page].longExcerpt+'</p>'
 
-            html_el += '<div class="tags"  style="padding-bottom: 10px;text-transform: capitalize;">Tags:'
+            html_el += '<div class="tags" style="padding-bottom: 10px;text-transform: capitalize;">Categories:'
                     for(var cat in results[page].categories){
-                    
-                    html_el += '<a class="tag-workflow" href="/tags/'+results[page].categories[cat]+'">'+results[page].categories[cat]+'</a>'
+                    html_el += '<a class="tag-workflow" href="/categories/'+results[page].categories[cat]+'">'+results[page].categories[cat]+'</a>'
                 }
-                html_el +='</div>'
+            html_el +='</div>'
             html_el += '<div class="getting-started-button">'
             html_el+= '<a href="'+results[page].uri+'" class="no-break-buttons"><div class="learn-more feature-block"><div class="feature-block feature-link">Read More</div> <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div></div></a>'
 
@@ -196,7 +196,7 @@
             // }
 
             
-            html_el += "</div> </div>"
+            html_el += "</div> </div><hr/>"
         }
         search_results.innerHTML += html_el;
 }
