--- a/layouts/partials/category.html
+++ b/layouts/partials/category.html
@@ -27,7 +27,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="search-results" style="display: none;">  
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="post_nor">
-    {{ $paginator := .Paginate (where (where .Pages.ByWeight.Reverse "Type" "blog") "IsPage" true) }}
+    {{ $paginator := .Paginate (where (where .Pages.ByDate.Reverse "Type" "blog") "IsPage" true) }}
     {{ range $index, $element := .Paginator.Pages }}
         <div class=" row">
             {{ if eq (mod $index 2) 0 }}
@@ -35,12 +35,13 @@
             {{else}}
             <div class='content col-md-6 col-xs-12 feature-description pull-right' style="padding-top: 60px;">
             {{end}}
+            <p class="feature-text">Author: {{ .Params.author }}, {{ .Date.Format "Jan 2, 2006" }}</p>
                 <h2 class="workflow-title">
                     {{ .Title }}
                 </h2>
                 <p class="feature-text">{{ .Params.longExcerpt }}</p>
                 <div class="tags"  style="padding-bottom: 10px;text-transform: capitalize;">
-                    Tags:
+                    Categories:
                     {{range .Params.categories}}
                     <a class="tag-workflow" href="/categories/{{ . | urlize }}">{{ . }}</a>
                     {{end}}
@@ -118,24 +119,25 @@
         for(var page in results){
             html_el += '<div class="row">';
             if (page % 2 == 0){
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left">';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left" style="padding-top: 60px;">';
             }
             else{
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right"';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right" style="padding-top: 60px;">';
             }
+            html_el += '<p class="feature-text">Author: '+results[page].author +', '+results[page].date+'</p>'
             html_el += '<h2 class="workflow-title">'+results[page].title+'</h2>'
 
             
             html_el += '<p class="feature-text">'+results[page].longExcerpt+'</p>'
 
-            html_el += '<div class="tags" style="padding-bottom: 10px;text-transform: capitalize;">Tags:'
+            html_el += '<div class="tags" id="tags" style="padding-bottom: 10px;text-transform: capitalize;">Categories:'
                     for(var cat in results[page].categories){
-                    
-                    html_el += '<a class="tag-workflow" href="/tags/'+results[page].categories[cat]+'">'+results[page].categories[cat]+'</a>'
+                    // console.log(results[page].categories[cat])
+                    html_el += '<a class="tag-workflow" href="/categories/'+results[page].categories[cat]+'">'+results[page].categories[cat]+'</a>'
                 }
-                html_el +='</div>'
+            html_el +='</div>'
             html_el += '<div class="getting-started-button">'
-            html_el+= '<a href="'+results[page].uri+'" class="no-break-buttons"><div class="learn-more feature-block"><div class="feature-block feature-link">Read More</div><div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div></div></a>'
+            html_el+= '<a href="'+results[page].uri+'" class="no-break-buttons"><div class="learn-more feature-block"><div class="feature-block feature-link">Read More</div> <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div></div></a>'
             // results[page].download != "" && results[page].download != '<no value>'
              
 
@@ -193,9 +195,18 @@
             html_el += "</div> </div><hr/>"
         }
         search_results.innerHTML += html_el;
-}
-    }
-    }
+
+
+        }
+        // ele = document.getElementById("tags")
+        // ele = ele.getElementsByTagName("a").style.textTransform="capitalize"
+        // console.log(ele.length)
+        
+        // for (i = 0; i <ele.length ; i++) { 
+        //   console.log(ele[i].style.textTransform = "capitalize")
+        // }
+        }
+        }
      
    </script>
    <script type="text/javascript" src="/js/lunr.js"></script>
