Few small fixes in blog design.

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,21 +1,23 @@
 {{ define "main" }}
   <div id="overflow-container" class="overflow-container">
 
-  <div id="loop-container" class="loop-container" style="padding-top:40px !important;">
+  <div id="loop-container" class="loop-container" >
 
 
 
       <div class="post type-post status-publish format-standard hentry category-standard category-travel entry full-without-featured odd excerpt-1">
         
         <div class="entry-meta">
-          <span class="date">{{ .Date.Format "Jan 2, 2006" }}</span>	<span>  </span>
+          <!-- <span class="date">{{ .Date.Format "Jan 2, 2006" }}</span>	<span>  </span> -->
 
           
 
-
-          {{ range .Params.categories }}
+          <span>Categories: </span>
+          {{ range $index, $element := .Params.categories }}
           <span class="category">
-            <span> / </span>
+            {{if gt $index 0 }}
+            <span> | </span>
+            {{end}}
 
             <a href="/categories{{ . | relURL }}">{{ . }}</a>
           </span>
@@ -27,10 +29,11 @@
           <h1 class='entry-title'> {{ .Title }}</h1>
           <span class="author-blog ">
             {{ if .Params.author }}
-            Author: {{ .Params.author | default ""}}
+            By: {{ .Params.author | default ""}},
             {{ else }}
             {{ .Params.author | default "" }}
-            {{ end }}
+            {{ end }} 
+            {{ .Date.Format "Jan 2, 2006" }}
           </span>
         </div>
         {{ if and (isset .Params "image") .Params.image }}
