--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -9,14 +9,14 @@
         </div>
     <div class="row" style="padding-left: 20px;">
       <div class="col-xs-12 col-md-12 content" style="margin-top: 20px;  display: inline;">
-         <input type="text" class="jsonly search-widget-workflow" id="search-input" style="width: 90%;" placeholder="Search blog by categories, title and description." tabindex="1" onkeydown="check_key(event)" autofocus />
+         <input type="text" class="jsonly search-widget-workflow" id="search-input" style="width: 80%;" placeholder="Search blog by categories, title and description." tabindex="1" onkeydown="check_key(event)" autofocus />
         <button type="button" class="search-button-workflow" id="searchBtn" onclick="search_content()">
             <i class="fa fa-search"></i>
         </button>
       </div>
       
     </div>
-    <div style="margin-top: 5px;padding-left: 20px;" id="myUL">
+    <div class="categoriesList" id="myUL">
         <ul >
             <span>Categories: </span>
           {{ range first 10 .Site.Taxonomies.categories.ByCount }}
@@ -32,15 +32,13 @@
     {{ range $index, $element := .Paginator.Pages }}
         <div class=" row">
             {{ if eq (mod $index 2) 0 }}
-            <div class='content col-md-6 col-xs-12 feature-description pull-left' style="padding-top: 60px;">
+            <div class='content col-md-6 col-xs-12 feature-description pull-left blog-content' style="padding-top: 60px;">
             {{else}}
-            <div class='content col-md-6 col-xs-12 feature-description pull-right' style="padding-top: 60px;">
+            <div class='content col-md-6 col-xs-12 feature-description pull-right blog-content' style="padding-top: 60px;">
             {{end}}
-                <p class="feature-text">Author: {{ .Params.author }}, {{ .Date.Format "Jan 2, 2006" }}</p>
-                <!-- <p class="feature-text"></p> -->
-                <!-- {{ .Date.Format "02 January" }} -->
-                <h2 class="workflow-title">
-                    {{ .Title }}
+                <p class="feature-text" style="margin-bottom:0 !important;font-size: 14px !important;">By: {{ .Params.author }}, {{ .Date.Format "Jan 2, 2006" }}</p>
+                <h2 class="workflow-title" style="margin-top: 10px !important">
+                   <a href="{{ .Permalink }}" > {{ .Title }}</a>
                 </h2>
                 <p class="feature-text">{{ .Params.longExcerpt }}</p>
                 <div class="tags" style="padding-bottom: 10px;text-transform: capitalize;">
@@ -63,7 +61,7 @@
                 </div>
                
                 </div>
-            <div class='content col-md-6 col-xs-12 {{if eq (mod $index 2) 0}}panel-left {{else }}{{ end }}' style="padding: 20px;padding-top: 0px;">
+            <div class='content col-md-6 col-xs-12 image-containter {{if eq (mod $index 2) 0}}panel-left {{else }}{{ end }}'>
                 <img src="{{.Params.thumbImage}}" class="workflow-image" >
             </div>
             
