--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -33,54 +33,24 @@
              </div>
             <div class="row center-block">
                 {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "blog") }}
-                <div class="col-lg-4 col-md-12 col-xs-12 home-page-blog" onclick="window.location.href = {{ .Permalink }}" style="cursor: pointer;" >
-                {{ if and (isset .Params "image") .Params.image }}
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 home-page-blog" onclick="window.location.href = {{ .Permalink }}" style="cursor: pointer;" >
+                <p>{{ .Date.Format "Jan 2, 2006" }}</p>
+                <div class="title-home-page-blog">
+                    <a href="{{ .Permalink }} "> {{ .Title }} </a>
+                </div>
+                <p>{{ if .Params.shortExcerpt}}
+                   {{ .Params.shortExcerpt | markdownify}}
+                   {{else}}
+                   {{ .Params.longExcerpt }}
+
+                   {{end}}
+                    <a href="{{ .Permalink }}" style=" white-space:pre;">Read more ></a>
+                </p>
+                {{ if .Params.frontPageImage }}
+                        <a href="{{ .Permalink }} "><img class="home-page-blog-image"  src="{{ .Params.frontPageImage}}" > </a>
+                {{end}}
+                 
                 
-                    <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt" >
-         
-               {{ else }}
-               <div class="post type-post status-publish format-standard hentry category-standard category-travel excerpt zoom full-without-featured excerpt">
-                  {{ end }}
-                  
-                  <div class="excerpt-container2 blog-home">
-                     <div class="excerpt-meta">
-                        <span class="date">{{ .Date.Format "02 January" }}</span>   <span>  </span>
-                        {{ if and (isset .Site.Params "author") .Site.Params.author }}
-                        <span class="author">
-                        {{ if and (isset .Site.Params "authorlink") .Site.Params.authorLink }}
-                        <a href="{{ .Site.Params.authorLink | default "" | absURL }}" title="Posts by {{ .Site.Params.author | default "" }}" rel="author">/{{ .Site.Params.author  | default "" }}</a>
-                        {{ else }}
-                        {{ .Site.Params.author | default "" }}
-                        {{ end }}
-                        </span>
-                        {{ end }}
-                        
-                     </div>
-                     <div class='excerpt-header'>
-                        <h2 class='excerpt-title'>
-                           <a href="{{ .Permalink }} "> {{ .Title }} </a>
-                        </h2>
-                     </div>
-
-                     <div class='excerpt-content front-page-image'>                        
-                        <article style="padding-bottom: 20px;">
-                           {{ if .Params.shortExcerpt}}
-                           {{ .Params.shortExcerpt | markdownify}}
-                           {{else}}
-                           {{ .Params.longExcerpt }}
-
-                           {{end}}
-                           <a href="{{ .Permalink }} "> Read more </a>
-                           
-                        </article>
-
-                        {{ if .Params.frontPageImage }}
-                        <img  src="{{ .Params.frontPageImage}}" >
-                        {{end}}
-                     </div>
-                     <!-- <div class="more-link-wrapper"><a class="more-link" href="{{ .Permalink }}">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div> -->
-                  </div>
-               </div>
                 </div>
                 {{end}}
             </div>
