--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1065,16 +1065,32 @@ h2.docs-subtitle {
   color: #4c85c5;
 }
 
-.home-page-blog .excerpt{
+/*.home-page-blog .excerpt{
   padding-bottom: 0;
   margin-bottom:30px;
 }
 .home-page-blog .excerpt-content{
   padding-bottom: 0;
-  /*height: 200px !important;*/
+  /*height: 200px !important;
 }
 .home-page-blog .excerpt-meta{
   padding-top: 10px;
+}*/
+.home-page-blog{
+  padding-left:20px !important;
+  padding-right:0px !important;
+  padding-top: 20px !important;
+  padding-bottom: 20px;
+  font-weight: lighter !important;
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-serif' !important;
+
+}
+.title-home-page-blog{
+  padding-bottom:10px !important;
+}
+.home-page-blog-image{
+  height: 190px;
+  width: 300px;
 }
 
 
@@ -1177,6 +1193,10 @@ h2.docs-subtitle {
     }
     #loop-container{
       padding-top:70px !important;
+    }
+    .home-page-blog-image{
+      height: 140px !important;
+      width: 240px !important;
     }
 }
 
