--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
  <header id="top" class="header navbar-fixed-top">
-        <div class="container header-pad" >
+        <div class="container" >
+            <div class="header-pad">
             <h1 class="logo pull-left" >
                 <a id="header-orangelogo" href="/">
                     <img id="logo-image" class="logo-image" src="/images/Single-Cell_Logo.png" alt="Logo">
@@ -28,5 +29,6 @@
                     </ul><!--//nav-->
                 </div>
             </nav><!--//main-nav-->
+        </div>
         </div>
     </header>
