Responsive design bug fixes-> Home page, download page and blog.

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -20,7 +20,7 @@
         <ul >
             <span>Categories: </span>
           {{ range first 10 .Site.Taxonomies.categories.ByCount }}
-            <li style="display: inline;text-transform: capitalize;"><a href="/categories/{{ .Name | urlize }}">{{ .Name }}</a></li>
+            <li style="display: inline;text-transform: capitalize;"><a class="tag-workflow" href="/categories/{{ .Name | urlize }}">{{ .Name }}</a></li>
           {{ end }}
         </ul>
     </div>
