--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 
 <section id="features" class="features section downloads download-back">
-        <div class="container-fluid downloados " style="margin-top: 50px">
+        <div class="container downloados " style="margin-top: 50px">
             <div class="row">
                 <div style="padding: 0px !important;">
                     {{ range .Site.Data.tabs}}
@@ -18,8 +18,8 @@
             </div><!--//row-->
         </div><!--//container-->
 
-        <div class="container-fluid" style="padding-bottom: 40px;">
-            <div class="row col">
+        <div class="container os-download" style="padding-bottom: 40px;">
+            <div class="row">
             <div id="win" class=" download-os downloadsize">
                 <div class="">
                     <div class="content">
