--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,10 @@
- <header id="top" class="header navbar-fixed-top">
-        <div class="container" >
-            <div class="header-pad">
-            <h1 class="logo pull-left" >
+<header id="top" class="header navbar-fixed-top">
+        <div class="container header-padding">
+            <h1 class="logo pull-left">
                 <a id="header-orangelogo" href="/">
                     <img id="logo-image" class="logo-image" src="/images/Single-Cell_Logo.png" alt="Logo">
                 </a>
-            </h1><!--//logo-->
+            </h1>
             <nav id="main-nav" class="main-nav navbar-right" role="navigation">
                 <div class="navbar-header">
                     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
@@ -29,6 +28,5 @@
                     </ul><!--//nav-->
                 </div>
             </nav><!--//main-nav-->
-        </div>
         </div>
     </header>
