--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -405,7 +405,7 @@ h3.custom-accordion-title {
 }
 
 #main {
-    overflow: auto;
+    overflow: hidden;
 }
 #main > div.container {
     padding-right: 0;
@@ -640,7 +640,7 @@ a.donate:hover {
     border: solid 2px !important;
     border-color: #d99614 !important;
 }
-@media (max-width: 990px) {
+@media (max-width: 992px) {
     .navbar-header {
         float: none;
     }
