Update design of feature page & change background color to white.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -918,7 +918,7 @@ blockquote {
 
 body {
     /*background-image: url('/images/bg.png'); background-repeat: repeat-x;*/
-    background-color: #cde2ea;
+    background-color: white;
 }
 
 .blog-home{
