--- a/layouts/home/single.html
+++ b/layouts/home/single.html
@@ -3,23 +3,25 @@
 
   <div id="overflow-container" class="overflow-container">
 
-  <div id="loop-container" class="loop-container">
-      <div class="post type-post status-publish format-standard hentry category-standard category-travel entry full-without-featured odd excerpt-1" style="margin-top: 80px; padding-top: 20px; ">
-        <div class='entry-header'>
-          <h1 class='entry-title'> {{ .Title }}</h1>
-        </div>
-        <div class="entry-container">
-          <div class="entry-content">
-            <article>
+  <div id="loop-container" class="loop-container" style="padding: 0 33%;">
+      <div  style="padding-top: 50px; ">
+        <!-- <div class='entry-header'> -->
+          
+        <!-- </div> -->
+        <!-- <div class="entry-container"> -->
+          <h2 > {{ .Title }}</h2>
+          <div class="entry-content" style="margin-top: 30px !important;">
+
+            <!-- <article> -->
               {{ .Content }}
-            </article>
+            <!-- </article> -->
           </div>
          
 
 		</div>
 		</div>
 	</div>
-	</div>
+	<!-- </div> -->
 <!-- </section> -->
 {{end}}
 
