Update feature page responsive design.

--- a/layouts/home/single.html
+++ b/layouts/home/single.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 <!-- <section id="features" class="features section background-features"> -->
 
-  <div id="overflow-container" class="overflow-container">
+  <div id="overflow-container" class="overflow-container featureColor">
 
-  <div id="loop-container" class="loop-container" style="padding: 0 33%;">
+  <div id="loop-container" class="loop-container featurePadding" style="">
       <div  style="padding-top: 50px; ">
         <!-- <div class='entry-header'> -->
           
