Replace blue background color with white.

--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -1,4 +1,4 @@
-<section id="features" class="features section padding-bottom " >
+<section id="features" class="features section padding-bottom backgroundcolor" >
 
 <div class="container page-background getting-started ">
         <div style="text-align: center">
