--- a/layouts/widget-catalog/list.html
+++ b/layouts/widget-catalog/list.html
@@ -1,5 +1,5 @@
 {{ define "main"}}
-<section id="features" class="features section padding-bottom">
+<section id="features" class="features section padding-bottom backgroundcolor">
    <div id="widgets" class="container page-background search-widgets">
    	<div class="row">
       <div class="col-xs-12 col-md-12 content" style="padding-bottom: 10px;">
