--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1412,3 +1412,7 @@ h2.docs-subtitle {
 .featureColor {
   background-color: white !important;
 }
+
+.backgroundcolor{
+  background-color: white !important;
+}
