--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 
-<section id="documentation" class="features section custom-reduce-padding-2">
-    <div class="container padding-top-page" style="background-color: white;">
+<section id="documentation" class="features section custom-reduce-padding-2 backgroundcolor" style="height: 100%; width: 100%;">
+    <div class=" padding-top-page" style="background-color: white;">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h1 class="title">{{ .Title }}</h1>
