--- a/layouts/getting-started/list.html
+++ b/layouts/getting-started/list.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
 
-    <section id="features" class="features section padding-bottom ">
+    <section id="features" class="features section padding-bottom backgroundcolor">
         <div class="container page-background getting-started">
            {{ range .Pages.ByWeight }}
             <div class=" row">
