--- a/layouts/privacy/list.html
+++ b/layouts/privacy/list.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
 
-<section id="features" class="features section padding-bottom">
+<section id="features" class="features section padding-bottom backgroundcolor">
         <div class="container page-background">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
