Footer text overflow fix.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
         <div class="container">
-            <div class="header-pad">
+            <!-- <div class="header-pad"> -->
             <div class="row footer-pad">
 
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="row">
 
-                        <div class="col-sm-4 sitemap-group">
+                        <div class="col-sm-4 col-md-4 sitemap-group">
                             <ul class="links list-sitemap">
                                 <li><b><div class="sitemap-cat">scOrange</div></b></li>
                                 <li><a class="sitemap-sub" href="/faq/">FAQ</a></li>
@@ -17,7 +17,7 @@
                             </ul>
                         </div>
 
-                        <div class="col-sm-4 sitemap-group">
+                        <div class="col-sm-4 col-md-4 sitemap-group">
                             <ul class="links list-sitemap">
                                 <li><div class="sitemap-cat">Download</div></li>
                                 <li><a class="sitemap-sub" href="/download/#windows">Windows</a></li>
@@ -26,7 +26,7 @@
                             </ul>
                         </div>
 
-                        <div class="col-sm-4 sitemap-group">
+                        <div class="col-sm-4 col-md-4 sitemap-group">
 
                             <ul class="links list-sitemap">
                                 <li><b><div class="sitemap-cat">Community</div></b></li>
@@ -89,5 +89,5 @@
                 </div>
             </div>
         </div>
-        </div>
+        <!-- </div> -->
     </footer><!--//footer-->
