Fix the disappearing download button.

--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -1,14 +1,14 @@
 {{ define "main"}}
 <div id="promoo">
 <section id="promo" class="promo section offset-header has-pattern">
-        <div class="container cover-image" style="margin-top:20px;">
+        <div class="container cover-image" style="margin-top:0px;">
             <div class="row ">
                 <div class="overview">
                     <div class="col-lg-4 col-md-5 col-xs-12 intro">
                         
                         <h1 class="title firstpagetitle"><span style="white-space:nowrap">{{.Title}}</span> <span style="white-space:nowrap">{{ .Description}}</span></h1>
-                    <div class="content">
-                        <span class="bigsummary summary">
+                    <div class="content ">
+                        <span class="bigsummary summary firstpagecontent">
                         {{.Content}}
                     </span>
                     
@@ -22,6 +22,7 @@
         </div>
     </section>
 </div>
+
 
 <div id="promoo" class="blog-home">
 <section id="promo" class="promo section has-pattern">
