--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -25,16 +25,18 @@
         </ul>
     </div>
 
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="search-results" style="display: none;">  
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="search-results" style="display: none;"> 
+    <hr/> 
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="post_nor">
+        <hr/>
     {{ $paginator := .Paginate (where (where .Pages.ByDate.Reverse "Type" "blog") "IsPage" true) }}
     {{ range $index, $element := .Paginator.Pages }}
         <div class=" row">
             {{ if eq (mod $index 2) 0 }}
-            <div class='content col-md-6 col-xs-12 feature-description pull-left blog-content' style="padding-top: 60px;">
+            <div class='content col-md-6 col-xs-12 feature-description pull-left blog-content' style="padding-top: 20px;">
             {{else}}
-            <div class='content col-md-6 col-xs-12 feature-description pull-right blog-content' style="padding-top: 60px;">
+            <div class='content col-md-6 col-xs-12 feature-description pull-right blog-content' style="padding-top: 20px;">
             {{end}}
                 <p class="feature-text" style="margin-bottom:0 !important;font-size: 14px !important;">By: {{ .Params.author }}, {{ .Date.Format "Jan 2, 2006" }}</p>
                 <h2 class="workflow-title" style="margin-top: 10px !important">
@@ -69,7 +71,6 @@
             
             </div>
             <hr/>
-            <!-- </div> -->
 {{end}}
     </div>
     
@@ -115,20 +116,19 @@
         var search_results = document.getElementById('search-results')
         if (results.length<1){
             search_results.innerHTML = '<div style="padding: 20px 10px"> No blog posts found. </div>';
-        // var html_el = ""
         }
         else{
         search_results.innerHTML = "";
 
-        var html_el = ""
+        var html_el = "<hr/>"
 
         for(var page in results){
             html_el += '<div class="row">';
             if (page % 2 == 0){
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left" style="padding-top: 60px;">';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left" style="padding-top: 20px;">';
             }
             else{
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right" style="padding-top: 60px;">';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right" style="padding-top: 20px;">';
             }
             html_el += '<p class="feature-text">Author: '+results[page].author +', '+results[page].date+'</p>'
             html_el += '<h2 class="workflow-title">'+results[page].title+'</h2>'
@@ -153,45 +153,10 @@
             else{
                 html_el += '<div class="content col-md-6 col-xs-12 " style="padding: 20px;padding-top: 0px;">';
             }
-            // if (results[page].images.length >1){
-            //     html_el+= '<div id="myCarousel'+page+'" class="carousel slide" data-interval="false" > <div class="carousel-inner workflow-slider">'
-            //         for(var img in results[page].images){
-            //             html_el+= '<div class="item'
-            //             if(img==0){
-            //                 html_el += 'active">'
-            //             }
-            //             else{
-            //                 html_el+= '>'
-            //             }
 
-            //            html_el += '<img src="'+results[page].images[img]+'" class="workflow-image" ></div>'
-                      
-            //         }
-            //         html_el += '</div>'
-            //     html_el += '<ol class="carousel-indicators" >'
-            //         for(var img in results[page].images){
-            //          html_el += '<li data-target="#myCarousel'+page+'" data-slide-to="'+img+'" class="'
-            //             if(img==0){
-            //                     html_el += 'active">'
-            //                 }
-            //             else{
-            //                 html_el+= '>'
-            //             }
-            //             html_el +='</li>'
-            //         }
-            //     html_el+='</ol>'
-
-            //     html_el += '<a class="left carousel-control" href="#myCarousel'+page+'" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" style="color: black;"></span></a>'
-                
-            //     html_el += '<a class="right carousel-control" href="#myCarousel'+page+'" data-slide="next"><span class="glyphicon glyphicon-chevron-right" style="color: black;"></span></a></div>'
-
-            // }
-            // else{
             if (results[page].image){
                 html_el += '<img class="image'+position+'" src="'+results[page].image+'" style="padding:40px;"></div>'
             }
-
-            // }
 
             
             html_el += "</div> </div><hr/>"
